--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "scripts": {
     "build": "npm install typescript && npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "seed": "npx tsc && node dist/seeder/prod",
+    "seed:dummy": "npx tsc && node dist/seeder/dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
